--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Pat's New Calves</h1>
                         <p class="intro-text">Official Donation Page for Pat's Calf Impants
-                            <br>For the cure</i>
+                            <br>For the cure</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -92,7 +92,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Donate</h2>
                 <p>A Serious page for a serious cause.  <a href="https://www.realself.com/Calf-implant/reviews">Success stories</a>. </p>
-                <p> <a href="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=imgres&cd=&cad=rja&uact=8&ved=0ahUKEwjBi4OVltXUAhWRZj4KHTFTD5cQjRwIBw&url=http%3A%2F%2Fskately.com%2Flibrary%2Fpeople%2Fpat-duffy&psig=AFQjCNHF1VPiYeomAD6RJCTixTHdT2x9cA&ust=1498348740649849">The Hero</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
+                <p> <a href="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=imgres&cd=&cad=rja&uact=8&ved=0ahUKEwjBi4OVltXUAhWRZj4KHTFTD5cQjRwIBw&url=http%3A%2F%2Fskately.com%2Flibrary%2Fpeople%2Fpat-duffy&psig=AFQjCNHF1VPiYeomAD6RJCTixTHdT2x9cA&ust=1498348740649849">The Hero</a></p>
                 <p>Together we can save, one donation at a time</p>
             </div>
         </div>
